# cyclops

./: .git-blame-ignore-revs  .gitattributes  .gitignore  LICENSE  README.md  RESULTS.md  ROADMAP.md  pyproject.toml
configs/: README.md
configs/_base/: default.yaml  kitti.yaml  nyu.yaml
configs/degradations/: blur.yaml  exposure.yaml  fog.yaml
configs/experiments/: 01_resnet50_kitti.yaml  01_resnet50_nyu.yaml  02_sd_unet_nyu.yaml  03_ijepa_nyu.yaml  04_fusion_nyu.yaml  05_depth_anything_nyu.yaml  05_depthanything_eval.yaml
notebooks/: 01_data_and_degradations.ipynb  02_models.ipynb  03_results.ipynb
scripts/: check_data.py  download_nyu.sh  evaluate.py  evaluate_robustness.py  extract_nyu_test.py  generate_degraded.py  predict_samples.py  train.py
src/cyclops/: __init__.py
src/cyclops/data/: __init__.py  datasets.py  transforms.py
src/cyclops/engine/: evaluator.py  trainer.py
src/cyclops/metrics/: __init__.py  depth.py
src/cyclops/models/: __init__.py  build.py  depth_anything.py  fusion.py  losses.py
src/cyclops/models/decoders/: __init__.py  dpt.py  lightweight.py
src/cyclops/utils/: __init__.py  checkpoint.py  config.py  device.py  logging.py
tests/: test_config.py  test_device.py
wandb/: latest-run
wandb/run-20260702_192836-hoz0vr8v/: run-hoz0vr8v.wandb
wandb/run-20260702_192836-hoz0vr8v/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260702_205747-9yae25mh/: run-9yae25mh.wandb
wandb/run-20260702_205747-9yae25mh/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+5 files in other folders)
